samples/_failures_safe/1761421477_8ce63e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98097272.c: In function ‘main’:
./samples/SAFE/__tmp_98097272.c:131:17: error: expected expression at end of input
  131 |                 display_entries_by_level(&
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_98097272.c:131:17: error: too few arguments to function ‘display_entries_by_level’
./samples/SAFE/__tmp_98097272.c:80:6: note: declared here
   80 | void display_entries_by_level(const struct LogAnalyzer *analyzer, const char *level) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_98097272.c:131:17: error: expected declaration or statement at end of input
  131 |                 display_entries_by_level(&
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_98097272.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98097272.c:131:17: error: expected declaration or statement at end of input
